# dataflow

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml
apps/api/: .dockerignore  .env.example  .env.production  Dockerfile  alembic.ini  config.py  database.py  main.py  pyproject.toml  railway.toml  requirements.txt  seed_comprehensive.py  seed_lake.py  seed_real_data.py
apps/api/alembic/: env.py
apps/api/middleware/: auth.py  error_handler.py  logger.py  rate_limiter.py
apps/api/models/: __init__.py  ai_and_ops.py  analytics.py  approval.py  catalog.py  connection.py  data_model.py  glossary.py  governance.py  pipeline.py  security.py  system.py  user.py
apps/api/routers/: analytics.py  approvals.py  auth.py  catalog.py  collaborate.py  commits.py  connections.py  connectors.py  contracts.py  cost.py  dashboards.py  glossary.py  ingestion.py  memory.py  models.py  monitoring.py  notifications.py  observability.py  performance.py  pipelines.py  quality.py  reports.py  reverse_etl.py  sdk.py  security.py  streams.py  workspaces.py
apps/api/schemas/: __init__.py
apps/api/services/: analytics_service.py  connection_service.py  cost_service.py  data_quality_service.py  governance_service.py  ingestion_service.py  modeling_service.py  monitoring_service.py  pipeline_scheduler.py  pipeline_service.py  transformation_service.py
apps/api/websockets/: collaboration.py  notifications.py  pipeline_status.py
apps/api/workers/: alert_worker.py  ingestion_worker.py  (+2 more)
(+140 files in other folders)
